Update Auth, Build Convection and Store API
