# app/Models/Convection.php
@@ -1,0 +1,35 @@
+<?php
+
+namespace App\Models;
+
+use Ramsey\Uuid\Uuid;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+
+class Convection extends Model
+{
+    use HasFactory;
+    
+    public $incrementing = false;
+    protected $keyType = 'string';
+
+    protected static function boot()
+    {
+        parent::boot();
+
+        static::creating(function ($model) {
+            $model->{$model->getKeyName()} = Uuid::uuid4()->toString();
+        });
+    }
+
+    protected $fillable = [
+        'name',
+        'address',
+        'phone_number',
+    ];
+
+    public function users()
+    {
+        return $this->hasMany(User::class, 'convection_id', 'id');
+    }
+}
