# app/Models/Store.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Models;
+
+use Ramsey\Uuid\Uuid;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Store extends Model
+{
+    use HasFactory;
+
+    public $incrementing = false;
+    protected $keyType = 'string';
+
+    protected static function boot()
+    {
+        parent::boot();
+
+        static::creating(function ($model) {
+            $model->{$model->getKeyName()} = Uuid::uuid4()->toString();
+        });
+    }
+
+    protected $fillable = [
+        'name',
+        'address',
+        'phone_number',
+    ];
+
+    public function users()
+    {
+        return $this->hasMany(User::class, 'store_id', 'id');
+    }
+}
